fix img not showing on gh-page

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #224941 url('/img/bg.jpg') no-repeat center center/cover;
+  background: #224941 url('./img/bg.jpg') no-repeat center center/cover;
   min-height: 100vh;
   color: #fff;
   font-family: 'Montserrat','sans-serif';
